@@ -1885,6 +1885,15 @@ typedef std::array<uint32_t, 3> (gdbarch_workitem_global_size_ftype) (struct gdb
 extern std::array<uint32_t, 3> gdbarch_workitem_global_size (struct gdbarch *gdbarch, thread_info *tp);
 extern void set_gdbarch_workitem_global_size (struct gdbarch *gdbarch, gdbarch_workitem_global_size_ftype *workitem_global_size);
 
+/* Return a unique kernel instance identifier for the context processed
+   by thread TP. */
+
+extern bool gdbarch_kernel_instance_id_p (struct gdbarch *gdbarch);
+
+typedef value * (gdbarch_kernel_instance_id_ftype) (struct gdbarch *gdbarch, thread_info *tp);
+extern value * gdbarch_kernel_instance_id (struct gdbarch *gdbarch, thread_info *tp);
+extern void set_gdbarch_kernel_instance_id (struct gdbarch *gdbarch, gdbarch_kernel_instance_id_ftype *kernel_instance_id);
+
 /* On some architectures the entry point cannot be determined based solely
    on the object file.
    Return true if the entry point was acquired in ENTRY_P. */
