@@ -673,6 +673,7 @@ set show_conv_list \
 	{$_workitem_global_id = void} \
 	{$_workitem_local_size = void} \
 	{$_workitem_global_size = void} \
+	{$_kernel_instance_id = void} \
 	{$_gthread = 0} \
 	{$_inferior = 1} \
 	{$_inferior_thread_count = 0} \
